--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head>
-	<title>Timeline</title>
-	<!-- data-main attribute tells require.js to load
-	     scripts/main.js after require.js loads. -->
-	<script data-main="src/index" src="bower_components/requirejs/require.js"></script>
-    </head>
-    <body>
-	<div>Timeline</div>
-    </body>
+  <head>
+    <title>Timeline</title>
+    <!-- data-main attribute tells require.js to load
+	 scripts/main.js after require.js loads. -->
+    <script data-main="src/index" src="bower_components/requirejs/require.js"></script>
+  </head>
+  <body>
+    <h1>Timeline</h1>
+    <div id="timeline"></div>
+  </body>
 </html>
