--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Timeline</h1>
     <div id="timeline"></div>
+    <div id="scroller"><div id="scroller-inner"></div></div>
   </body>
 </html>
