set scale in ui

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Timeline</h1>
+    Scale <input type="text" onkeydown="setScale(this)" value="1"></input>
     <div id="timeline"></div>
     <div id="scroller"><div id="scroller-inner"></div></div>
   </body>
