thread name column

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <h1>Timeline</h1>
-    Scale <input type="text" onkeydown="setScale(this)" value="1"></input>
-    <div id="timeline"></div>
+    Scale <input type="text" onkeydown="setScale(this)" value="1"></input><br>
+    <div id="threads" style="float: left"></div>
+    <div id="timeline" style="float: left"></div><br>
     <div id="scroller"><div id="scroller-inner"></div></div>
   </body>
 </html>
